[metadata]
name = mcaddon
version = attr: mcaddon.__version__
author = Legopitstop
author_email=officiallegopitstop@gmail.com
description=Minecraft: Bedrock Edition development kit
keywords=Minecraft: Bedrock Edition, mcpack, mcaddon, behaviorpack, resourcepack, JSON
url=https://github.com/legopitstop/mcaddon/
long_description=file: README.md
long_description_content_type=text/markdown
license=MIT
# Chose either "3 - Alpha", "4 - Beta" or "5 - Production/Stable" as the current state of your package
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.11


[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    mclang
    molang
    commentjson
    jsonschema
    chevron
    Pillow
    numpy
    PyGLM
    watchdog

[options.package_data]
* = data/**/*.json

[options.entry_points]
console_scripts =
    mcaddon = mcaddon.cli:main
